# linkwise

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  package.json  pytest.ini  wrangler.toml
.github/workflows/: docker-image.yml
app/: app.py  index.html
app/static/: app.js  style.css
app/static/css/: style.css
app/static/js/: app.js  bookmarks.js  bulk-actions.js  density.js  folder-suggestions.js  import-export.js  settings.js  state.js  ui.js
legacy/flask/: app.py
migrations/: 0001_init.sql  0002_app_device_sessions.sql
scripts/: build-worker.sh
src/: app.py  auth.rs  crypto.rs  db.rs  export.rs  lib.rs  models.rs  routes.rs  webauthn.rs
tests/: conftest.py  test_api_regression.py  test_e2e_regression.py
webapp/: index.html
webapp/static/css/: style.css
webapp/static/js/: app.js  auth.js  bookmarks.js  bulk-actions.js  density.js  dialog.js  import-export.js  mobile.js  selection.js  settings.js  state.js  ui.js  utils.js
